# friday-app

./: .env  .gitignore  .prettierrc.cjs  README.md  biome.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: icon.icns
src-tauri/icons/tray/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/agents/: openai.rs
src-tauri/src/client/: clipboard.rs  config.rs  events.rs  mod.rs  permissions.rs  setup.rs  shortcut.rs  tray.rs
src-tauri/src/commands/: agent.rs  clipboard.rs  data.rs  mod.rs  text.rs  window.rs  windows.rs
src-tauri/src/db/: connection.rs
src-tauri/src/schema/: command.rs
src-tauri/src/service/: agent.rs  commands.rs  global.rs  mod.rs  window.rs
src-tauri/src/utils/: error.rs  logger.rs  mod.rs  response.rs  serialize.rs
src-tauri/src/utils/client/: config.rs  mod.rs  setup.rs  shortcut.rs  tray.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/commands/: page.tsx
src/app/components/: block-editor.tsx  command-card.tsx  in-stage.tsx  operate-panel.tsx  quicker-commands.tsx  stage-input.tsx  stage-output.tsx  titlebar.tsx  tool-commands.tsx  version-footer.tsx
src/app/components/animated-icons/part/: props.ts
src/app/components/animated-icons/src/: calendar.tsx  copy.tsx  search.tsx  settings-gear.tsx
src/app/components/common/: motion-loading.tsx
src/app/components/icons/: index.ts
src/app/components/icons/src/: calendar.tsx  (+6 more)
src/app/components/layout/: app-sidebar.tsx  nav-main.tsx  nav-projects.tsx  sidebar-layout.tsx  team-switcher.tsx
src/app/schema/: basic.schema.ts  command.schema.ts  model.schema.ts  response.schema.ts
src/app/setting/: layout.tsx  page.tsx
src/app/styles/: global.scss  glow.scss
src/components/ui/: command.tsx  dialog.tsx  sidebar.tsx  typing-animation.tsx
src/lib/: commands.ts
(+4 files in other folders)
