[package]
name = "hits-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hits_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "macos-private-api", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2.0.2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.38"
global-hotkey = "0.6.3"
log = "0.4.22"
macos-accessibility-client = "0.0.1"
arboard = "3.4.1"
get-selected-text = "0.1.6"
selection = "1.2.0"
cocoa = "0.26.0"
window-vibrancy = "0.5.2"
tauri-plugin-os = "2.2.0"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
tauri-plugin-sql = { version = "2.2.0", features = ["sqlite"] }
dirs = "6.0.0"
sqlx = { version = "0.8.3", features = ["sqlite"] }
time = { version = "0.3.37", features = ["serde"] }

[dependencies.uuid]
version = "1.13.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# you can add the dependencies on the `[dependencies]` section if you do not target mobile
[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-clipboard = "2.0.0"


